--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
 
 :root {
-  --color-green: #2ecc40;
-  --color-red: #e74c3c;
-  --color-blue: #2980ef;
+  --color-green: #bfa14a; /* dark gold */
+  --color-red: #181614;   /* black */
+  --color-blue: #bfc0c0;  /* silver */
   --color-gold: #bfa14a;
   --color-brown: #7c5c35;
   --color-bg: #f8f8f8;
